--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/preset-env": "7.2.0",
     "@babel/preset-react": "7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.10",
+    "@fortawesome/free-solid-svg-icons": "^5.6.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "babel-loader": "8.0.4",
     "react-hot-loader": "4.6.2",
     "webpack": "4.27.1",
